--- a/flask_blog/templates/entries/index.html
+++ b/flask_blog/templates/entries/index.html
@@ -3,5 +3,16 @@
 <!doctype html>
 <title>Flask Blog</title>
 
-<a class="navbar-brand" href="/">Flaskblog</a>
-<br>投稿がありません
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jauery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
+        <a class="navbar-brand" href="/">Flaskblog</a>
+
+        <div class="blog-body">
+        投稿がありません
+        </div>
+</div>
