--- a/flask_blog/templates/entries/index.html
+++ b/flask_blog/templates/entries/index.html
@@ -3,16 +3,32 @@
 <!doctype html>
 <title>Flask Blog</title>
 
+<!-- bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jauery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Flaskblog</a>
-
-        <div class="blog-body">
-        投稿がありません
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNAV" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarNAV">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">ログイン</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">ログアウト</a>
+                </li>
+            </ul>
         </div>
+    </nav>
+
+    <div class="blog-body">
+    投稿がありません
+    </div>
 </div>
