--- a/flask_blog/templates/entries/index.html
+++ b/flask_blog/templates/entries/index.html
@@ -12,11 +12,11 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Flaskblog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNAV" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse" id="navbarNAV">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
                     <a class="nav-link" href="/login">ログイン</a>
