--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -31,6 +31,12 @@
         </div>
     </nav>
 
+    {% for message in get_flashed_messages() %}
+    <div class="alert-info" role="alert">
+        {{ message }}
+    </div>
+    {% endfor %}
+
     <div class="blog-body">
         {% block body %}{% endblock %}
     </div>
