--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -20,11 +20,11 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if not session.logged_in %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">ログイン</a>
+                    <a class="nav-link" href="{{ url_for('login') }}">ログイン</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">ログアウト</a>
+                    <a class="nav-link" href="{{ url_for('logout') }}">ログアウト</a>
                 </li>
                 {% endif %}
             </ul>
