--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -35,7 +35,7 @@
     </nav>
 
     {% for message in get_flashed_messages() %}
-    <div class="alert-info" role="alert">
+    <div class="alert alert-info" role="alert">
         {{ message }}
     </div>
     {% endfor %}
