--- a/flask_blog/templates/login.html
+++ b/flask_blog/templates/login.html
@@ -5,12 +5,12 @@
 <form action="{{ url_for('login') }}" method=post>
     <div class="form-group">
         <label for="InputTitle">ユーザ名</label>
-        <input type="text" class="form-control" id="InputTitle" name="username">
+        <input type="text" class="form-control" id="InputTitle" name=username>
     </div>
 
     <div class="form-group">
         <label for="InputPassword">パスワード</label>
-        <input type="password" class="form-control" id="InputPassword" name="password">
+        <input type="password" class="form-control" id="InputPassword" name=password>
     </div>
     <button type="submit" class="btn btn-primary">ログイン</button>
 </form>
