--- a/flask_blog/templates/entries/new.html
+++ b/flask_blog/templates/entries/new.html
@@ -1,6 +1,6 @@
 <!-- flask_blog/templates/entries/new.html -->
 
-{% extends "layout.hmtl" %}
+{% extends "layout.html" %}
 {% block body %}
 <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
     <div class="form-group">
